<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.40"
        android:gravity="center"
        android:text="@string/prompt_first_name"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/them"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.40"
        android:gravity="center"
        android:text="@string/task"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.20"
        android:gravity="center"
        android:text="@string/prompt_date"
        android:textStyle="italic" />


</LinearLayout>